tests/compile-fail/salsa_value_invalid_field_attributes.stderr
error: multiple `#[salsa_value]` attributes on field
 --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:3:5
  |
3 | /     #[salsa_value(prove_safe_to_retain_manually)]
4 | |     #[salsa_value(prove_safe_to_retain_manually)]
5 | |     field: String,
  | |_________________^

error: expected `prove_safe_to_retain_manually`
  --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:10:5
   |
10 | /     #[salsa_value(not_a_manual_proof)]
11 | |     field: String,
   | |_________________^

error: `#[salsa_value(prove_safe_to_retain_manually)]` cannot be used with `#[salsa::input]`
  --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:16:5
   |
16 | /     #[salsa_value(prove_safe_to_retain_manually)]
17 | |     field: String,
   | |_________________^
